--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body{
   font-family: 'Nunito',sans-serif;
   background: #EFF1F7;
-  background-image: url("imgg.jpg");
+  background-image: url("image/imgg.jpg");
   background-size: cover;
 }
 .content
@@ -52,7 +52,55 @@ nav ul{
 nav li{
   list-style: none;
   padding: 1em 0;
+  margin:  0 20px;
+  transition: 0.5s;
 }
+nav li a
+{
+  display:block;
+  position:relative;
+  text-decoration:none;
+  padding:5px;
+  font-size: 18px;
+  font-family: sans-serif ;
+  color:rgb(10, 1, 1);
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+nav ul:hover nav li a
+{
+  transform:scale(1.5);
+  opacity:.2;
+  filter:blur(5px);
+}
+nav ul li a:hover
+{
+  transform:scale(1.5);
+  opacity: .2;
+  filter: blur(0);
+}
+nav ul li a:before 
+{
+  content:'';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ff497c;
+  transition:0.5s;
+  transform-origin:tansform right;
+  transform: scaleX(1) ; 
+  z-index: -1;
+   
+}
+nav ul li a:hover:before 
+{
+  transition: 0.5s;
+  transform-origin:tansform left;
+  transform: scaleX(1);
+   
+} 
 .hero
 {
   max-width: 960px;
@@ -112,6 +160,58 @@ footer ul li
     justify-content: space-between;
     flex-direction: column;
   }
+  nav li{
+    list-style: none;
+    padding: 1em 0;
+    margin:  0 20px;
+    transition: 0.5s;
+  }
+  nav li a
+  {
+    display:block;
+    position:relative;
+    text-decoration:none;
+    padding:5px;
+    font-size: 18px;
+    font-family: sans-serif ;
+    color:rgb(10, 1, 1);
+    text-transform: uppercase;
+    transition: 0.5s;
+  }
+  nav ul:hover nav li a
+  {
+    transform:scale(1.5);
+    opacity:.2;
+    filter:blur(5px);
+  }
+  nav ul li a:hover
+  {
+    transform:scale(1.5);
+    opacity: .2;
+    filter: blur(0);
+  }
+  nav ul li a:before 
+  {
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ff497c;
+    transition:0.5s;
+    transform-origin:tansform right;
+    transform: scaleX(0.5) ; 
+    z-index: -1;
+     
+  }
+  nav ul li a:hover:before 
+  {
+    transition: 0.5s;
+    transform-origin:tansform left;
+    transform: scaleX(1);
+     
+  } 
   .sidebar
   {
     background:linear-gradient(to right,
