--- a/style.css
+++ b/style.css
@@ -1,15 +1,136 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
   font-family: 'Nunito',sans-serif;
   background: #EFF1F7;
   background-image: url("image/imgg.jpg");
   background-size: cover;
 }
+.wrapper{
+  margin-top: 10%;
+}
+#about h1
+{
+  font-family: 'Allura', cursive;
+  font-size: 52px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+#skills h1
+{
+  font-family: 'Allura', cursive;
+  font-size: 52px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+#contacts h1
+{
+  font-family: 'Allura', cursive;
+  font-size: 52px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+.wrapper h1{
+  font-family: 'Allura', cursive;
+  font-size: 52px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+
+.team{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.team .team_member{
+  background: #fff;
+  margin: 5px;
+  margin-bottom: 50px;
+  width: 300px;
+  padding: 20px;
+  line-height: 20px;
+  color: #8e8b8b;  
+  position: relative;
+}
+
+.team .team_member h3{
+  color: #81c644;
+  font-size: 26px;
+  margin-top: 50px;
+}
+
+.team .team_member p.role{
+  color: #ccc;
+  margin: 12px 0;
+  font-size: 13px;
+  text-transform: uppercase;
+}
+
+.team .team_member .team_img{
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.team .team_member .team_img img{
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+  border-radius: 50%;
+}
 .content
 {
   grid-area: content;
   
 }
+#about 
+{
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items: center;
+  padding:60px 2% 20px 2%;
+}
+#skills
+{
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items: center;
+  padding:60px 2% 20px 2%;
+
+}
+#achievements
+{
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items: center;
+  padding:60px 2% 20px 2%;
+
+}
+
 .sidebar
 {
   grid-area: sidebar;
@@ -38,7 +159,7 @@ body{
   grid-template-rows: 130px,800px,250px;
 }
 .content,.sidebar,.footer{
-  padding: 1em;
+  padding: 0em;
 
 }
 nav ul{
@@ -122,7 +243,7 @@ nav ul li a:hover:before
 .hero p
 {
   font-weight: 300;
-  line-height: 1.8em;
+  line-height: 2em;
 }
 footer ul{
   max-width: 640px;
@@ -143,6 +264,103 @@ h1{
 footer ul li
 {
   list-style: none;
+}
+.animate {
+  width: 500px;
+  margin: auto 0;
+  padding: 10px;
+}
+
+.animate li {
+  position: relative;
+  list-style: none;
+  margin: 50px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.animate li:before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(245, 64, 19, 0.5);
+  border-radius: 1000px;
+}
+
+.animate li:after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgb(191, 194, 40);
+  border-radius: 1000px;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+.animate li.lang:after {
+  animation-name: python;
+
+}
+
+@keyframes python {
+  to {
+      width: 90%;
+  }
+}
+
+.animate li.cp:after {
+  animation-name: cpp;
+}
+
+@keyframes cpp {
+  to {
+      width: 80%;
+  }
+}
+
+.animate li.designer:after {
+  animation-name: designer;
+}
+
+@keyframes designer {
+  to {
+      width: 75%;
+  }
+}
+.animate li.developer:after {
+  animation-name: dev;
+
+}
+
+@keyframes dev {
+  to {
+      width: 30%;
+  }
+}
+.connect
+{
+  font-size: 40px;
+  padding:60px 2% 20px 2%;
+}
+.contact_centre 
+{
+  text-align: center;
+  font-size: 25px;
+  
+}
+.main_name
+{
+  font-family: 'Allura', bold;
+  font-size: 50px;
+  text-align: center;
+  
 }
 @media(min-width:1040px)
 {
@@ -201,7 +419,7 @@ footer ul li
     background: #ff497c;
     transition:0.5s;
     transform-origin:tansform right;
-    transform: scaleX(0.7) ; 
+    transform: scaleX(0.7 ) ; 
     z-index: -1;
      
   }
