--- a/style.css
+++ b/style.css
@@ -4,27 +4,45 @@
   padding: 0;
   box-sizing: border-box;
 }
+html 
+{
+  scroll-behavior: smooth;
+}
 body{
   font-family: 'Nunito',sans-serif;
   background: #EFF1F7;
-  background-image: url("image/imgg.jpg");
+  background: linear-gradient(
+    to right, 
+    #f6f85d 0%, 
+    #f0a0cf 50%, 
+    #84e4f5 50%, 
+    #e9f583 100%
+  );
   background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 160vh;
+
 }
 .wrapper{
   margin-top: 10%;
+}
+.main_name
+{
+  font-family: 'Allura', cursive;
+  font-size: 52px;
 }
 #about h1
 {
   font-family: 'Allura', cursive;
   font-size: 52px;
-  margin-bottom: 60px;
+  margin-bottom:  60px;
   text-align: center;
 }
 #skills h1
 {
-  font-family: 'Allura', cursive;
   font-size: 52px;
-  margin-bottom: 60px;
   text-align: center;
 }
 #contacts h1
@@ -98,39 +116,107 @@ body{
 #about 
 {
   width: 100%;
-  height: 100vh;
+  height: 97vh;
   box-sizing: border-box;
   display: flex;
-  flex-direction:column;
   justify-content:center;
   align-items: center;
-  padding:60px 2% 20px 2%;
+  background-color: #f1f1f1;
+}
+.about-us
+{
+   background: url(image\minee.jpeg) no-repeat left;
+   background-size: 55%;
+   background-color: #fdfdfd;
+   overflow: hidden;
+   padding: 90px 0;
+}
+.inner-section
+{
+  width: 55%;
+  float: right;
+  background-color: #fdfdfd;
+  padding: 140px;
+  box-shadow: 10px 10px 8px rgba(0,0,0,0.3);
+}
+.inner-section h1
+{
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: 900;
+}
+.text
+{
+  font-size: 15px;
+  font: 1rem 'AmstelvarAlpha', sans-serif;
+  color: #545454;
+  line-height: 30px;
+  text-align: justify;
+  margin-bottom: 40px;
+}
+.my-skills button
+{
+  font-size: 22px;
+  text-align:center;
+  letter-spacing:2px;
+  border: none;
+  border-radius: 20px;
+  padding: 8px; 
+  width: 200px;
+  background-color: #00999c;
+  color: white;
+  cursor: pointer;
+}
+.my-skills button:hover
+{
+  transition: 1s;
+  background-color: #ecf5f5;
+  color: #00999c;
 }
 #skills
 {
-  width: 100%;
+  background-image: url("image\joanna-kosinska-1_CMoFsPfso-unsplash.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction:column;
   justify-content:center;
   align-items: center;
-  padding:60px 2% 20px 2%;
+  padding:160px 2% 20px 2%;
+  background-position: center center;
 
 }
 #achievements
 {
-  width: 100%;
+  background-image: url("image\artem-sapegin-b18TRXc8UPQ-unsplash.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction:column;
   justify-content:center;
   align-items: center;
-  padding:60px 2% 20px 2%;
+  background-position: center center;
+
 
 }
-
+#contacts
+{
+  background-image: url("image\pexels-moose-photos-1037992.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  background-position: center center;
+}
 .sidebar
 {
   grid-area: sidebar;
@@ -152,7 +238,7 @@ body{
 {
   font-size:1.5em;
   width:100%;
-  height: 100vh;
+  height: 110vh;
   display:grid;
   grid-template-areas: "sidebar" "content" "footer";
   grid-template-columns: 1fr;
@@ -228,6 +314,12 @@ nav ul li a:hover:before
   margin: 0 auto;
   text-align: center;
 }
+.hero-content h1 
+{
+  color: rgb(17, 12, 12);
+  text-shadow: 0 2px 0 rgba(0,0,0,0.5);
+  font-size: 60px;
+}
 .hero img
 {
   width: 400px;
@@ -299,7 +391,7 @@ footer ul li
   height: 15px;
   background-color: rgb(191, 194, 40);
   border-radius: 1000px;
-  animation-duration: 1s;
+  animation-duration: 4s;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
@@ -362,8 +454,66 @@ footer ul li
   text-align: center;
   
 }
+@media screen and (max-width:1200px)
+{
+  .inner-section
+  {
+    padding: 50px;
+  }
+}
+@media screen and (max-width:1000px)
+{
+  
+  .container
+  {
+    margin: 0;
+  }
+  .about-us
+  {
+    background-size: 100%;
+    padding:130px 60px;
+    overflow: hidden;
+  }
+  .inner-section
+  {
+    width: 100%;
+  }
+  
+}
+@media screen and (max-width:600px)
+{
+  
+  body 
+  {
+    height: 15  0vh;
+  }
+  .about-us{
+    padding: 0;
+  }
+  .inner-section
+  {
+    padding: 60px;
+  }
+  .my-skills button 
+  {
+    font-size: 19px;
+    padding:5px;
+    width:160px;
+  }
+}
 @media(min-width:1040px)
 {
+  .hero-content h1
+  {
+    color: rgb(27, 2, 2);
+    text-shadow: 0 3px 0 rgba(216, 51, 51, 0.5);
+  }
+  .hero-content p
+{
+  color: rgb(17, 12, 12);
+  text-shadow: 0 1px 0 rgba(0,0,0,0.5);
+  font-size: 50px;
+}
   .container
   {
     grid-template-areas: 
@@ -371,6 +521,7 @@ footer ul li
     "sidebar footer";
     grid-template-columns: 300px 1fr;
     grid-template-rows: 1fr auto;
+
   }
   nav ul
   {
@@ -465,6 +616,15 @@ footer ul li
   svg
   {
     width:20%;
+  }
+}
+@media screen and (min-width:700px)
+{
+  .wrapper{
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
 }
 @media (max-width:750px)
